added docusaurus and swanky config (#1)
* added docusaurus and swanky config

* added swanky-node folder and config to .gitignore

* updated path to run swanky node from folder

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ dist
 # coverage
 coverage
 coverage.json
+
+# intellij config files
+.idea
+
+# swanky config file and folder
+swanky-node
+swanky.config.json
