--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -22,5 +22,8 @@
     "dotenv": "^16.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@727-ventures/typechain-polkadot": "1.0.0-beta.2"
   }
 }
